--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
+  <title>Welcome to my website</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -13,6 +13,7 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to your first GitHub Pages website!</p>
+
 
 </body>
 </html>
